compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__out_of_range_erlang_float_in_const.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2681
expression: const x = 1.8e308
snapshot_kind: text
---
----- SOURCE CODE
const x = 1.8e308

----- ERROR
error: Float outside of valid range
  ┌─ /src/one/two.gleam:1:11
  │
1 │ const x = 1.8e308
  │           ^^^^^^^

This float value is too large to be represented by a floating point type:
float values must be in the range -1.7976931348623157e308 -
1.7976931348623157e308.
