compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__record_access_on_inferred_variant_when_field_is_in_other_variants.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 676
expression: "\npub type Wibble {\n  Wibble(wibble: Int)\n  Wobble(wobble: Int)\n}\n\npub fn main() {\n  let always_wibble = Wibble(10)\n  always_wibble.wobble\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(wibble: Int)
  Wobble(wobble: Int)
}

pub fn main() {
  let always_wibble = Wibble(10)
  always_wibble.wobble
}


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:9:17
  │
9 │   always_wibble.wobble
  │                 ^^^^^^ Did you mean `wibble`?

The value being accessed has this type:

    Wibble

It has these accessible fields:

    .wibble

Note: The field exists in this custom type but is not defined for the
current variant. Ensure that you are accessing the field on a variant where
it is valid.
