compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__record_update_wrong_variant.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2529
expression: "\npub type MyRecord {\n  A(common: Int, other: String)\n  B(common: Int, different: Float)\n}\n\npub fn b_to_a(value: MyRecord) {\n  case value {\n    A(..) -> value\n    B(..) as b -> A(..b, other: \"Hi\")\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type MyRecord {
  A(common: Int, other: String)
  B(common: Int, different: Float)
}

pub fn b_to_a(value: MyRecord) {
  case value {
    A(..) -> value
    B(..) as b -> A(..b, other: "Hi")
  }
}


----- ERROR
error: Incorrect record update
   ┌─ /src/one/two.gleam:10:23
   │
10 │     B(..) as b -> A(..b, other: "Hi")
   │                       ^ This is a `B`

This value is a `B` so it cannot be used to build a `A`, even if they share
some fields.

Note: If you want to change one variant of a type into another, you should
specify all fields explicitly instead of using the record update syntax.
