compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__recursive_var.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 395
expression: "let id = fn(x) { x(x) } 1"
snapshot_kind: text
---
----- SOURCE CODE
let id = fn(x) { x(x) } 1

----- ERROR
error: Recursive type
  ┌─ /src/one/two.gleam:1:20
  │
1 │ let id = fn(x) { x(x) } 1
  │                    ^

I don't know how to work out what type this value has. It seems to be
defined in terms of itself.
Hint: Add some type annotations and try again.
