compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__same_imports_multiple_times_4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1910
expression: "\n        import one.{fn1}\n        import two.{fn2} as one\n        "
snapshot_kind: text
---
----- SOURCE CODE
-- one.gleam

            pub fn fn1() { 1 }
            

-- two.gleam

            pub fn fn2() { 1 }
            

-- main.gleam

        import one.{fn1}
        import two.{fn2} as one
        

----- ERROR
error: Duplicate import
  ┌─ /src/one/two.gleam:3:9
  │
2 │         import one.{fn1}
  │         ---------------- First imported here
3 │         import two.{fn2} as one
  │         ^^^^^^^^^^^^^^^^^^^^^^^ Reimported here

`one` has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
